Refactor tests to use fully qualified Tag references